sort.basic.lessons.sort.basic.bubble.AlgBubbleSort3.scala.error
AlgBubbleSort3:10: error: illegal start of simple expression
	var tri = 1
        ^AlgBubbleSort3:27: error: Unmatched closing brace '}' ignored here
}
^